[package]
name = "solaredge_exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive"] }
jiff = "0.2.23"
prometheus-client = "0.24.1"
reqwest = { version = "0.13.2", default-features = false, features = ["cookies", "json", "rustls", "http2", "charset"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
